# dupish

./: .env  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/: pyproject.toml
backend/backend/: main.py  settings.py
backend/backend/clients/: __init__.py  redis_client.py  s3_client.py  s3_schema.py  weaviate_client.py
dockers/: Dockerfile.backend  Dockerfile.bento
dupish/: api.py  onnx_to_bento.py
inference/: pyproject.toml
inference/inference/: api.py  onnx_to_bento.py  service.py
model_zoo/: isc_ft_v107.onnx
